[gd_scene load_steps=7 format=2]

[ext_resource path="res://JetpackGameMode/PauseScreen/PauseScreen.gd" type="Script" id=1]
[ext_resource path="res://JetpackGameMode/PauseScreen/pause_bg_gradient_2.png" type="Texture" id=2]
[ext_resource path="res://Fonts/OrbitronBlack72.font" type="BitmapFont" id=3]
[ext_resource path="res://CommonScenes/Buttons/BlueScreen110Theme.tres" type="Theme" id=4]
[ext_resource path="res://CommonScenes/Button.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]

resource_name = "fade out"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="PauseScreen" type="Node2D"]

pause_mode = 2
script = ExtResource( 1 )
main_menu_path = "res://CommonScenes/MainMenu/MainMenuScreen.tscn"
options_path = "res://CommonScenes/OptionsMenu/OptionsMenuScreen.tscn"
level_select_path = "res://CommonScenes/LevelSelectMenu/LevelSelectMenu.tscn"

[node name="TextureFrame" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
"anims/fade out" = SubResource( 1 )
blend_times = [  ]

[node name="ButtonsBlock" type="Control" parent="." index="2"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 1282.0
margin_top = 201.0
margin_right = 1835.0
margin_bottom = 137.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Pause" type="Label" parent="ButtonsBlock" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -14.0
margin_top = -141.0
margin_right = 277.0
margin_bottom = -55.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0.960784, 1, 1 )
text = "PAUSE"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Resume" type="Button" parent="ButtonsBlock" index="1"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 433.0
margin_bottom = 110.0
rect_min_size = Vector2( 0, 110 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_top = NodePath("../Quit")
focus_neighbour_bottom = NodePath("../Replay")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Resume"
flat = false
align = 1
script = ExtResource( 5 )
pressed_sfx = "ui_change"

[node name="Replay" type="Button" parent="ButtonsBlock" index="2"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 22.0
margin_top = 135.0
margin_right = 455.0
margin_bottom = 245.0
rect_min_size = Vector2( 0, 110 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_top = NodePath("../Resume")
focus_neighbour_bottom = NodePath("../LevelSelect")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Restart"
flat = false
align = 1
script = ExtResource( 5 )
pressed_sfx = "ui_confirm"

[node name="LevelSelect" type="Button" parent="ButtonsBlock" index="3"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 45.0
margin_top = 270.0
margin_right = 478.0
margin_bottom = 380.0
rect_min_size = Vector2( 0, 110 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_top = NodePath("../Replay")
focus_neighbour_bottom = NodePath("../Options")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Stage Select"
flat = false
align = 1
script = ExtResource( 5 )
pressed_sfx = "ui_change"

[node name="Options" type="Button" parent="ButtonsBlock" index="4"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 70.0
margin_top = 405.0
margin_right = 503.0
margin_bottom = 515.0
rect_min_size = Vector2( 0, 110 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_top = NodePath("../LevelSelect")
focus_neighbour_bottom = NodePath("../QuitMainMenu")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Options"
flat = false
align = 1
script = ExtResource( 5 )
pressed_sfx = "ui_change"

[node name="QuitMainMenu" type="Button" parent="ButtonsBlock" index="5"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 93.0
margin_top = 540.0
margin_right = 526.0
margin_bottom = 650.0
rect_min_size = Vector2( 0, 110 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_top = NodePath("../Options")
focus_neighbour_bottom = NodePath("../Quit")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back to Main Menu"
flat = false
align = 1
script = ExtResource( 5 )
pressed_sfx = "ui_confirm"

[node name="Quit" type="Button" parent="ButtonsBlock" index="6"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 118.0
margin_top = 675.0
margin_right = 551.0
margin_bottom = 785.0
rect_min_size = Vector2( 0, 110 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_top = NodePath("../QuitMainMenu")
focus_neighbour_bottom = NodePath("../Resume")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Quit Game"
flat = false
align = 1
script = ExtResource( 5 )
pressed_sfx = "ui_change"

[connection signal="pressed" from="ButtonsBlock/Resume" to="." method="_on_resume_pressed"]

[connection signal="pressed" from="ButtonsBlock/Replay" to="." method="_on_replay_pressed"]

[connection signal="pressed" from="ButtonsBlock/LevelSelect" to="." method="_on_LevelSelect_pressed"]

[connection signal="pressed" from="ButtonsBlock/Options" to="." method="_on_options_pressed"]

[connection signal="pressed" from="ButtonsBlock/QuitMainMenu" to="." method="_on_QuitMainMenu_pressed"]

[connection signal="pressed" from="ButtonsBlock/Quit" to="." method="_on_quit_pressed"]


